--- a/theme/index.html
+++ b/theme/index.html
@@ -38,12 +38,12 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans|IBM+Plex+Sans+Condensed|IBM+Plex+Serif" rel="stylesheet">
   </body>
 {% if isDevelopment %}
-  <script src="https://unpkg.com/react@16.5.1/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.5.1/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/react@16.5.2/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16.5.2/umd/react-dom.development.js"></script>
 {% else %}
-  <script src="https://unpkg.com/react@16.5.1/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@16.5.1/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/react@16.5.2/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16.5.2/umd/react-dom.production.min.js"></script>
 {% endif %}
-  <script src="{{ root }}common.js"></script>
+  <script src="{{ root }}commons.js"></script>
   <script src="{{ root }}index.js"></script>
 </html>
