--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans|IBM+Plex+Sans+Condensed|IBM+Plex+Serif" rel="stylesheet">
   </body>
 
-  <script src="https://unpkg.com/react@16.5.2/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@16.5.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/react@16.6.1/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16.6.1/umd/react-dom.development.js"></script>
 
   <script src="/commons.js"></script>
   <script src="/index.js"></script>
